best-practices/restrict_image_registries/e2e/01-policy.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- ../restrict_image_registries.yaml
assert:
- policy-assert.yaml
