best-practices/restrict_image_registries/e2e/02-enforce.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
- script: |
    sed 's/validationFailureAction: audit/validationFailureAction: Enforce/' restrict_image_registries.yaml | kubectl create -f -
