best-practices/restrict_image_registries/e2e/04-manifests.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- file: good-pods.yaml
  shouldFail: false
- file: good-podcontrollers.yaml
  shouldFail: false
- file: bad-pod-noregistry.yaml
  shouldFail: true
- file: bad-pod-notall.yaml
  shouldFail: true
- file: bad-pod-false.yaml
  shouldFail: true
# - file: bad-podcontrollers.yaml
#   shouldFail: true
