best-practices/restrict_image_registries/e2e/05-ephemeral.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
  - script: if kubectl debug -it goodpod02-registry --image=busybox:1.35 --target=k8s-nginx -n ir-pods-namespace; then exit 1; else exit 0; fi;
