best-practices/restrict_image_registries/e2e/98-delete.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
  - command: kubectl delete deployments --all --force --grace-period=0 -n ir-pods-namespace
  - command: kubectl delete pods --all --force --grace-period=0 -n ir-pods-namespace
  - command: kubectl delete cronjobs --all --force --grace-period=0 -n ir-pods-namespace
