best-practices/restrict_image_registries/e2e/03-enforce-policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-image-registries
spec:
  validationFailureAction: enforce
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
